# pybedtools

./: .gitignore  .gitmodules  .install-bedtools.sh  .install-bedtools2.sh  .install-samtools.sh  .install-tabix.sh  .travis-test-2.18.sh  .travis-test.sh  .travis.yml  3-brief-examples.html  FAQs.html  LICENSE.txt  MANIFEST.in  README.rst  autodoc_source.html  bootstrap.py  build-docs.sh  build.py  changes.html  compile-docs.sh  condatest.sh  create-a-bedtool-tutorial.html  default-arguments.html  dev-requirements.txt  each.html  ez_setup.py  filtering.html  flow-of-commands.html  genindex.html  history.html  includeme.html  index.html  intersections.html  intervals.html  intro.html  main.html  objects.inv  optional-requirements.txt  pavement.py  piping.html  (+45 more)
_modules/: index.html  pybedtools.html
_sources/: 3-brief-examples.rst.txt  autodoc_source.rst.txt  changes.rst.txt  changes.txt  filtering.txt  flow-of-commands.txt  includeme.txt  index.txt  main.rst.txt  main.txt  pybedtools-dev-history.rst.txt  pybedtools.featurefuncs.TSS.txt  pybedtools.featurefuncs.add_color.rst.txt  pybedtools.featurefuncs.bedgraph_scale.rst.txt  pybedtools.featurefuncs.five_prime.rst.txt  scripts.rst.txt  topical-bam.rst.txt  topical-design-principles.rst.txt  topical-documentation-contents.txt  topical-genome.rst.txt  topical-low-level-ops.rst.txt  topical-random.rst.txt  topical-random.txt  topical-saving.rst.txt  topical-saving.txt  tutorial-contents.rst.txt
_static/: custom.css
autodocs/: pybedtools.bedtool.BedTool.absolute_distance.html  pybedtools.bedtool.BedTool.all_hits.html  (+116 more)
(+622 files in other folders)
