[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "pybedtools"
dynamic = ["version", "maintainers", "license", "classifiers", "readme"]
description='Wrapper around BEDTools for bioinformatics work'
dependencies = [
    "numpy",
    "pysam",
    "pandas"
]
[tool.pytest.ini_options]
testpaths = ["pybedtools"]
